--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
         <h4 class="first-sect">PORTFOLIO</h4>
         <div class="row">
             <div class="col-xs-12 col-md-4">
-                <img src="images/p01.png"/>
+                <img class="phone" src="images/p01.png"/>
             </div>
             <div class="col-xs-12 col-md-4">
-                <img src="images/p02.png"/>
+                <img class="phone" src="images/p02.png"/>
             </div>
             <div class="col-xs-12 col-md-4">
-                <img src="images/p03.png"/>
+                <img class="phone" src="images/p03.png"/>
             </div>
         </div>
     </div>
